--- a/Front-UMI/package.json
+++ b/Front-UMI/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.4",
     "@angular/platform-browser-dynamic": "^14.0.4",
     "@angular/router": "^14.0.4",
+    "@tailwindcss/forms": "^0.5.2",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.0-rc.1",
